<resources>
    <string name="app_name">Cookie</string>

    <!-- Landing Page -->
    <string name="go">Go</string>
    <string name="next">Next</string>
    <string name="getStarted">Get Started</string>
    <string name="skip">Skip</string>

    <!-- Bottom Nav Bar -->
    <string name="navbar_home">Home</string>
    <string name="navbar_myRecipes">Recipes</string>
    <string name="navbar_settings">Settings</string>
    <string name="search">Search</string>
    <string name="fridge">Fridge</string>

    <!-- Profile Page -->
    <string name="string_app_logo">Cookie</string>
    <string name="settings">Settings</string>
    <string name="back_button">Back</string>
    <string name="insertBio">Insert your bio here</string>
    <string name="post_count">%0</string>
    <string name="followers_count">%0</string>
    <string name="chef_count">%0</string>
    <string name="chef_count_name">Chefs</string>
    <string name="followers_name">Followers</string>
    <string name="post_name">Post</string>
    <string name="profile_name">%profile</string>
    <string name="navbar_profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>