<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/background_color"
    tools:context=".ProfilePageFragment">

    <ImageView
        android:id="@+id/appLogo"
        android:layout_width="100dp"
        android:layout_height="70dp"
        android:clickable="true"
        android:focusable="true"
        android:contentDescription="@string/string_app_logo"
        android:padding="5dp"
        app:srcCompat="@drawable/cookie_logo" />

    <LinearLayout
        android:id="@+id/profileDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="true"
        android:layout_below="@id/profile_name"
        android:orientation="horizontal">

        <!-- Spazi per conteggio post, followers e seguiti -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <!-- Spazio per conteggio post -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/postNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/post_name" />

            </LinearLayout>

            <!-- Spazio per conteggio followers -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/followersNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/followers_name" />

            </LinearLayout>

            <!-- Spazio per conteggio seguiti -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/chefNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chef_count_name" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/profile_image"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:foreground="@drawable/circle_background"
        android:scaleType="centerCrop"
        android:src="@drawable/giulio_profile_picture"
        app:riv_oval="true" />

    <!--Spazio per nome profilo-->
    <TextView
        android:id="@+id/profile_name"
        android:fontFamily="@font/coolvetica_regular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/profile_image"
        android:padding="16dp"
        android:textStyle="bold"
        android:gravity="center_horizontal"
        android:text="@string/profile_name"
        android:textSize="18sp" />

    <!--Spazio per la bio-->
    <TextView
        android:id="@+id/bioTextview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/profileDetails"
        android:padding="16dp"
        android:gravity="center_horizontal"
        android:text="@string/insertBio"
        android:textSize="18sp" />

    <!--RecyclerView a griglia verticale-->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/grid_recyclerview_profile_page"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/bioTextview"
        android:padding="16dp" />

    <ImageView
        android:id="@+id/settings"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:clickable="true"
        android:focusable="true"
        android:contentDescription="@string/settings"
        android:padding="5dp"
        app:srcCompat="@drawable/baseline_settings_24_black" />

</RelativeLayout>
